<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_submit"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_submit" />
        <item
            android:id="@+id/nav_visualize"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_visualize" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_filter" />
    </group>
    <group android:id="@+id/group_data">
        <item
            android:id="@+id/nav_export"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/nav_export" />
    </group>
</menu>
